tests/baselines/reference/propertyAssignmentUseParentType1.errors.txt
propertyAssignmentUseParentType1.ts(5,14): error TS2741: Property 'num' is missing in type '() => true' but required in type 'N'.
propertyAssignmentUseParentType1.ts(8,14): error TS2741: Property 'nun' is missing in type '() => true' but required in type '{ (): boolean; nun: 456; }'.


==== propertyAssignmentUseParentType1.ts (2 errors) ====
    interface N {
        (): boolean
        num: 123;
    }
    export const interfaced: N = () => true;
                 ~~~~~~~~~~
!!! error TS2741: Property 'num' is missing in type '() => true' but required in type 'N'.
!!! related TS2728 propertyAssignmentUseParentType1.ts:3:5: 'num' is declared here.
    interfaced.num = 123;
    
    export const inlined: { (): boolean; nun: 456 } = () => true;
                 ~~~~~~~
!!! error TS2741: Property 'nun' is missing in type '() => true' but required in type '{ (): boolean; nun: 456; }'.
!!! related TS2728 propertyAssignmentUseParentType1.ts:8:38: 'nun' is declared here.
    inlined.nun = 456;
    
    export const ignoreJsdoc = () => true;
    /** @type {string} make sure to ignore jsdoc! */
    ignoreJsdoc.extra = 111
    